fixed canvas clipping css

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: "Roboto Flex", sans-serif;
     color: white;
     width: 100%;
+    margin:0
 }
 
 .background {
@@ -116,8 +117,9 @@ input[type="range"]::-moz-range-thumb {
     justify-content: center;
     align-items: center;
     height:270px;
-    width:50px;
+    width:100%;
     margin:0 auto;
+    overflow-x: clip;
 }
 
 #canvas {
